--- a/style.css
+++ b/style.css
@@ -1,5 +1,32 @@
-.label {
-    float: left;
-    display: block;
-    clear: left;
+
+h1 {
+  text-align: center
 }
+
+html {
+  font-family: Helvetica Neue, Arial, sans-serif;
+  background: whitesmoke;
+}
+
+label {
+  width: 100%;
+  font-size:16px;
+  float:left;
+  position:relative;
+}
+form {
+    width: 500px;
+    border: 1px solid red;
+    border-radius: 10px;
+    margin: auto;
+    position:relative;
+    background-color: #fff;
+    padding:20px 20px;
+}
+
+input[type=text],input[type=description],input[type=password]{
+  border-radius: 4px; 
+  border: 1px solid purple;
+  font-size:30px;
+}
+
