--- a/style.css
+++ b/style.css
@@ -1,32 +1,82 @@
-
 h1 {
-  text-align: center
+  text-align: center;
 }
 
 html {
   font-family: Helvetica Neue, Arial, sans-serif;
-  background: whitesmoke;
+  background: #2980b9;
 }
 
 label {
   width: 100%;
-  font-size:16px;
-  float:left;
-  position:relative;
 }
+
 form {
-    width: 500px;
-    border: 1px solid red;
-    border-radius: 10px;
-    margin: auto;
-    position:relative;
-    background-color: #fff;
-    padding:20px 20px;
+  margin: 0 auto;
+  width: 600px;
+  border: 1px solid #999;
+  padding: 30px;
+  border-radius: 5px;
+  background: #ecf0f1;
 }
 
-input[type=text],input[type=description],input[type=password]{
-  border-radius: 4px; 
-  border: 1px solid purple;
-  font-size:30px;
+input[type=text], input[type=password], select{
+  font-size: 20px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  width: 100%;
+  padding: 10px 5px;
 }
 
+textarea{
+  width: 100%;
+  height: 100px;
+  font-size: 20px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+input[type=submit]{
+  border: 1px solid #fff;
+  background: #e74c3c;
+  color: white;
+  font-size: 20px;
+  padding: 15px;
+}
+
+input[type=reset]{
+  border: 1px solid #fff;
+  background: #bdc3c7;
+  color: white;
+  font-size: 20px;
+  padding: 15px;  
+}
+
+.radio-label-1{
+  background: #1abc9c;
+  padding: 10px;
+}
+
+.radio-label-2{
+  background: #2ecc71;
+  padding: 10px;
+}
+
+.radio-label-3{
+  background: #3498db;
+  padding: 10px;
+}
+
+.radio-label-4{
+  background: #9b59b6;
+  padding: 10px;
+}
+
+.radio-label-5 {
+  background: #f39c12;
+  padding: 10px;
+}
+
+.checkbox-label{
+  padding: 10px;
+}
